# healthie-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SOLUTION.md  bot.py  pyproject.toml
.claude/: settings.json
app/integrations/: healthie_api.py  healthie_playwright.py
app/scheduling/: __init__.py  handlers.py  nodes.py  prompts.py
app/shared/tools/: __init__.py  create_appointment.py  find_patient.py  utils.py
scripts/: test_create_appointment.py  test_create_appointment_api.py  test_create_appointment_playwright.py  test_e2e_flow.py  test_find_patient.py  test_find_patient_api.py
tests/app/scheduling/: test_handlers.py  test_nodes.py
tests/app/shared/tools/: test_create_appointment.py  test_find_patient.py
thoughts/shared/brainstorms/: 2026-03-29-latency-reliability-evaluation-improvements.md
thoughts/shared/plans/: 2026-03-27-conversation-flow.md  2026-03-28-healthie-api-integration.md  2026-03-28-playwright-healthie-integration.md  20260327_conversation-flow.md  20260328-playwright-healthie-integration.md  20260328_healthie-api-integration.md
thoughts/shared/research/: 20260327_how-the-bot-works.md  20260328_healthie-staging-api-patients-appointments.md  20260328_playwright-healthie-ui.md
